--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -63,6 +63,7 @@ $blue-dark: #084fd1;
 $blue-2: #2b69f6;
 $blue-3: #3a78bc;
 $blue-4: #5B72EC;
+$blue-5: #2f71eb;
 $blue-light: #bbd3ff;
 $blue-light-1: #ddeaff;
 $lilac: #dfe9fd;
@@ -77,3 +78,4 @@ $grey-special: #5d5d5d;
 $grey-2: #616E81;
 $grey-3: #504F56;
 $grey-4: #454E58;
+$grey-blue: #637cab;
