--- a/src/scss/components/_order-form.scss
+++ b/src/scss/components/_order-form.scss
@@ -11,6 +11,7 @@
   padding: 13px 24px;
   border-radius: 7px;
   border: 2px solid $grey-2;
+  font-weight: 400;
   color: $grey-3;
   line-height: 15px;
   outline: none;
