My order history

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -57,6 +57,7 @@ $white: #ffffff;
 $white-1: #fbfbfb;
 $yellow: #ffe200;
 $yellow-1: #fae14c;
+$yellow-2: #f9f33f;
 $blue: #1467ff;
 $blue-1: #5591ff;
 $blue-dark: #084fd1;
