Добавляет страницу blacklist

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -67,6 +67,7 @@ $blue-light-1: #ddeaff;
 $lilac: #dfe9fd;
 $purple: #616d99;
 $grey-dark: #282828;
+$grey-extra-light: #fafafa;
 $grey-light: #bfbfbf;
 $grey-light-1: #c1c1c1;
 $grey-light-2: #99a2c5;
