--- a/src/scss/components/_notification.scss
+++ b/src/scss/components/_notification.scss
@@ -35,17 +35,15 @@
 
 .notification__item {
   position: relative;
-  padding: 16px 22px 0 22px;
+  padding: 16px 22px 14px 22px;
+  padding-left: 22px;
+  padding-bottom: 14px;
+
   font-size: 12px;
   line-height: 18px;
   font-weight: 400;
   color: $purple;
   border-top: 1px solid $black-3;
-}
-
-.notification__item {
-  padding-left: 22px;
-  padding-bottom: 14px;
 
   &:last-of-type {
     border-bottom: 1px solid $black-3;
@@ -70,15 +68,13 @@
   padding-left: 60px;
 }
 
-.notification__item--new:before {
+.notification__item--new::before {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='12' cy='12' r='12' fill='%232B69F6'/%3E%3Cpath d='M6 10.8571L10.6957 16L18 8' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
 }
 
 .notification__item--error::before {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='12' cy='12' r='12' fill='%23FF0000'/%3E%3Cpath d='M7 7L17 17M17 7L7 17' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E ");
 }
-
-
 
 .notification__item a {
   color: $blue-2;
