--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -78,6 +78,7 @@
 @import "components/section-banner";
 @import "components/product-order";
 @import "components/sending-link";
+@import "components/help-buyer";
 // @import "components/notification";
 // @import "components/new-banner";
 // @import "components/place-parcel";
