--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -79,6 +79,7 @@
 @import "components/product-order";
 @import "components/sending-link";
 @import "components/help-buyer";
+@import "components/purchase-help";
 // @import "components/notification";
 // @import "components/new-banner";
 // @import "components/place-parcel";
