--- a/src/scss/components/_help-buyer.scss
+++ b/src/scss/components/_help-buyer.scss
@@ -79,6 +79,10 @@
   @include media-breakpoint-up(lg){
     padding: 30px;
     margin: 0;
+
+    &::before {
+      background-size: auto auto;
+    }
   }
 }
 
