--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -80,6 +80,7 @@
 @import "components/sending-link";
 @import "components/help-buyer";
 @import "components/purchase-help";
+@import "components/how-issue";
 // @import "components/notification";
 // @import "components/new-banner";
 // @import "components/place-parcel";
