--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -86,6 +86,8 @@
 @import "components/help-buyer";
 @import "components/purchase-help";
 @import "components/how-issue";
+@import "components/advantage-bayres";
+
 // @import "components/notification";
 // @import "components/new-banner";
 // @import "components/place-parcel";
