--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -87,6 +87,7 @@
 @import "components/purchase-help";
 @import "components/how-issue";
 @import "components/advantage-bayres";
+@import "components/cost-bayres";
 
 // @import "components/notification";
 // @import "components/new-banner";
