--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,6 +26,7 @@
 @import "typography/heading-primary";
 @import "typography/heading-secondary";
 @import "typography/heading-tertiary";
+@import "typography/main-text";
 @import "typography/link";
 @import "typography/fw";
 
@@ -88,6 +89,7 @@
 @import "components/how-issue";
 @import "components/advantage-bayres";
 @import "components/cost-bayres";
+@import "components/list-stores";
 
 // @import "components/notification";
 // @import "components/new-banner";
