--- a/src/scss/components/_cost-bayres.scss
+++ b/src/scss/components/_cost-bayres.scss
@@ -1,4 +1,5 @@
 .cost-bayres {
+  margin-bottom: 30px;
 
   & ul {
     list-style: none;
@@ -10,6 +11,14 @@
       grid-template-columns: 1fr 1fr 1fr;
       column-gap: 20px;
     }
+  }
+
+  @include media-breakpoint-up(md) {
+    margin-bottom: 70px;
+  }
+
+  @include media-breakpoint-up(lg) {
+    margin-bottom: 150px;
   }
 }
 
@@ -84,6 +93,7 @@
     padding: 60px 20px 40px 20px;
     max-width: 387px;
     min-height: 356px;
+    margin-top: auto;
   }
 }
 
