--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,7 +26,7 @@
 @import "typography/heading-primary";
 @import "typography/heading-secondary";
 @import "typography/heading-tertiary";
-@import "typography/main-text";
+@import "typography/text-content";
 @import "typography/link";
 @import "typography/fw";
 
@@ -85,7 +85,6 @@
 @import "components/product-order";
 @import "components/sending-link";
 @import "components/help-buyer";
-@import "components/purchase-help";
 @import "components/how-issue";
 @import "components/advantage-bayres";
 @import "components/cost-bayres";
