--- a/src/scss/components/_advantage-bayres.scss
+++ b/src/scss/components/_advantage-bayres.scss
@@ -1,6 +1,6 @@
 .advantage-bayres {
   @include media-breakpoint-up(lg) {
-    margin-bottom: 63px;
+    margin-bottom: 68px;
   }
 }
 
@@ -37,7 +37,8 @@
   }
 
   @include media-breakpoint-up(lg) {
-    padding-top: 100px;
+    padding-top: 103px;
+    padding-bottom: 77px;
   }
 }
 
@@ -56,7 +57,7 @@
   }
 
   @include media-breakpoint-up(lg) {
-    margin-bottom: 60px;
+    margin-bottom: 57px;
     max-width: 793px;
   }
 }
@@ -64,7 +65,7 @@
 .advantage-bayres__item {
   position: relative;
 
-  padding: 103px 20px 5px 0;
+  padding: 122px 20px 5px 0;
   margin-bottom: 40px;
 
   &::before {
@@ -76,6 +77,7 @@
     left: calc(50% - 80px);
     top: -30px;
     background-repeat: no-repeat;
+    background-size: 100%;
   }
 
   @include media-breakpoint-up(md) {
@@ -162,15 +164,10 @@
 }
 
 .advantage-bayres__text {
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 23px;
   text-align: center;
-  letter-spacing: 0.04em;
+  color: $black-1;
 
   @include media-breakpoint-up(md) {
-    font-size: 16px;
-    line-height: 29px;
     text-align: start;
   }
 }
@@ -183,7 +180,7 @@
   }
 
   @include media-breakpoint-up(lg) {
-    transform: translateY(-48%);
+    transform: translateY(-46%);
   }
 }
 
