--- a/src/scss/components/_cost-bayres.scss
+++ b/src/scss/components/_cost-bayres.scss
@@ -82,7 +82,14 @@
   }
 
   & p {
-    margin: 0;
+    margin: 0 0 20px 0;
+
+    &:last-child {
+      margin: 0;
+    }
+    @include media-breakpoint-up(lg) {
+      margin: 0;
+    }
   }
 
   @include media-breakpoint-up(lg) {
@@ -126,6 +133,10 @@
 }
 
 .cost-bayres__text {
+  color: $black-1;
+  font-size: 14px;
+  line-height: 22px;
+
   @include media-breakpoint-up(lg) {
     font-weight: 400;
     font-size: 12px;
