--- a/src/scss/components/_help-buyer.scss
+++ b/src/scss/components/_help-buyer.scss
@@ -1,6 +1,10 @@
 .help-buyer {
+  margin-bottom: 13px;
+}
+
+.help-buyer__reason {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
 
   @include media-breakpoint-up(lg){
     margin-bottom: 32px;
@@ -43,7 +47,9 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  min-height: 600px;
+  @include media-breakpoint-up(lg) {
+    min-height: 600px;
+  }
 }
 
 .help-buyer__item {
@@ -143,8 +149,8 @@
     max-width: 461px;
 
     &::before {
-      left: -152px;
-      top: -127px;
+      left: -154px;
+      top: -126px;
       width: 188px;
       height: 215px;
     }
@@ -166,7 +172,7 @@
     max-width: 480px;
 
     &::before {
-      left: -125px;
+      left: -127px;
       top: -146px;
       width: 188px;
       height: 215px;
@@ -190,7 +196,7 @@
     max-width: 421px;
 
     &::before {
-      left: -109px;
+      left: -111px;
       top: -95px;
       width: 188px;
       height: 215px;
@@ -198,4 +204,108 @@
   }
 
 }
+
+.help-buyer__purchase-wrapper {
+  background: $white;
+  border-radius: 20px;
+  padding: 20px 0 235px 0;
+
+  @include media-breakpoint-up(md){
+    padding: 20px 0 300px 0;
+  }
+
+
+  @include media-breakpoint-up(lg) {
+    padding: 80px 0;
+    padding-bottom: 198px;
+    background: url("../../img/new_main_page/buyer/help-buyer-line.svg"), $white;
+    background-repeat: no-repeat;
+    background-position: -122px 43px;
+  }
+
+}
+
+.help-buyer__content-wrapper {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 330px;
+    height: 250px;
+    bottom: -250px;
+    left: calc(50% - 140px);
+    background-image: url("../../img/new_main_page/buyer/help-buyer.png");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+  }
+
+  @include media-breakpoint-up(md) {
+    &::before {
+      width: 500px;
+      height: 350px;
+      left: calc(50% - 230px);
+      top: 150px;
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
+    display: flex;
+    justify-content: end;
+    padding-left: 480px;
+
+    &::before {
+      width: 1030px;
+      height: 772px;
+      left: -202px;
+      top: -160px;
+      background-size: auto;
+    }
+  }
+}
+
+.help-buyer__content {
+  @include media-breakpoint-up(lg) {
+    max-width: 590px;
+
+    &::before {
+      position: absolute;
+      content: "";
+      display: block;
+
+    }
+  }
+}
+
+.help-buyer__purchase-heading {
+  margin: 0 0 15px 0;
+  text-align: center;
+
+  @include media-breakpoint-up(md) {
+    margin: 0 0 40px 0;
+    text-align: start;
+  }
+}
+
+.help-buyer__purchase-text {
+  text-align: center;
+
+  @include media-breakpoint-up(md){
+    text-align: start;
+  }
+}
+
+.help-buyer__sending {
+  transform: translateY(-10%);
+
+  @include media-breakpoint-up(md){
+    transform: translateY(-15%);
+  }
+
+  @include media-breakpoint-up(lg){
+    transform: translateY(-55%);
+  }
+}
+
 
