--- a/src/scss/typography/_text-content.scss
+++ b/src/scss/typography/_text-content.scss
@@ -1,14 +1,11 @@
-.main-text {
-  font-size: 14px;
+.text-content {
+  font-size: 13px;
   line-height: 22px;
   font-weight: 400;
+  letter-spacing: 0.04em;
+  margin: 0;
 
   @include media-breakpoint-up(md) {
-    font-size: 14px;
-    line-height: 22px;
-  }
-
-  @include media-breakpoint-up(lg) {
     font-size: 16px;
     line-height: 29px;
   }
