--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -89,6 +89,7 @@
 @import "components/advantage-bayres";
 @import "components/cost-bayres";
 @import "components/list-stores";
+@import "components/disclaimer";
 
 // @import "components/notification";
 // @import "components/new-banner";
