--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -57,6 +57,7 @@ $white: #ffffff;
 $white-1: #fbfbfb;
 $yellow: #ffe200;
 $yellow-1: #fae14c;
+$yellow-2: #fee200;
 $blue: #1467ff;
 $blue-1: #5591ff;
 $blue-dark: #084fd1;
@@ -64,8 +65,10 @@ $blue-2: #2b69f6;
 $blue-3: #3a78bc;
 $blue-light: #bbd3ff;
 $blue-light-1: #ddeaff;
+$blue-light-2: #d5eeff;
 $lilac: #dfe9fd;
 $purple: #616d99;
+$purple2: #D6D5FF;
 $grey-dark: #282828;
 $grey-extra-light: #fafafa;
 $grey-light: #bfbfbf;
