--- a/src/scss/components/_how-issue.scss
+++ b/src/scss/components/_how-issue.scss
@@ -16,7 +16,7 @@
   padding: 0;
   background-image: url("../../img/new_main_page/buyer/how-issue.svg");
   background-repeat: no-repeat;
-  background-position: left calc(50% - 30px) top -40px;
+  background-position: left calc(50% - 30px) top -10px;
 
   @include media-breakpoint-up(md) {
     background-position: left calc(50% - 30px) top -40px;
@@ -54,11 +54,50 @@
     position: absolute;
     display: block;
     content: "";
-    background-size: 100% auto;
+    width: 67px;
+    height: 67px;
+    top: -90px;
+    right: calc(50% - 35px);
+    box-shadow: 0 0 30px rgba(0,0,0, 0.05);
+    border-radius: 10px;
+  }
+
+  &::after {
+    position: absolute;
+    display: block;
+    content: '';
+    width: 18px;
+    height: 18px;
+    top: -32px;
+    right: calc(50% - 11px);
+    border-radius: 50%;
+    background-image: radial-gradient($white, $white 4px, $grey-dark 5px, $grey-dark 7px, transparent 8px);
+    box-shadow: 0 4px 4px 0 rgba($black, 0.25), 0 14px 14px 0 rgba(#808080, 0.32);
+    border: 2px solid #c1c1c1;
+    z-index: 1;
   }
 
   @include media-breakpoint-up(md) {
-    margin-top: 160px;
+    margin-top: 190px;
+
+    &::before {
+      width: 135px;
+      height: 135px;
+      top: -170px;
+      border-radius: 20px;
+      background-position: center;
+      background-size: 51px 51px;
+      background-repeat: no-repeat;
+    }
+
+    &::after {
+      width: 38px;
+      height: 38px;
+      top: -55px;
+      left: calc(50% - 35px);
+      background-image: radial-gradient($white, $white 9px, $grey-dark 10px, $grey-dark 14px, transparent 15px);
+      border: 5px solid $grey-light-1;
+    }
   }
 
   @include media-breakpoint-up(lg) {
@@ -69,31 +108,21 @@
 .how-issue__item--choice {
 
   &::before {
-    width: 170px;
-    height: 200px;
-    top: -130px;
-    left: calc(50% - 80px);
     background-image: url("../../img/new_main_page/buyer/choice.png");
-    background-repeat: no-repeat;
+    background-color:  $white;
   }
 
   @include media-breakpoint-up(md) {
-
     &::before {
-      width: 250px;
-      height: 200px;
-      top: -170px;
+      right: calc(50% - 50px);
+      background-size: 102px 102px;
     }
+
   }
 
   @include media-breakpoint-up(lg) {
     margin-bottom: 72px;
     margin-right: 680px;
-
-    &::before {
-      width: 270px;
-      height: 210px;
-    }
   }
 }
 
@@ -106,32 +135,20 @@
 .how-issue__item--redemption {
 
   &::before {
-    width: 125px;
-    height: 210px;
-    top: -130px;
-    right: calc(50% - 50px);
     background-image: url("../../img/new_main_page/buyer/redemption.png");
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-color:  $white;
   }
 
   @include media-breakpoint-up(md) {
 
     &::before {
-      width: 175px;
-      height: 210px;
-      right: calc(50% - 100px);
-      top: -170px;
+      right: calc(50% - 50px);
+      background-size: 102px 102px;
     }
   }
 
   @include media-breakpoint-up(lg) {
     margin-bottom: 111px;
-
-    &::before {
-      width: 195px;
-      height: 210px;
-    }
   }
 }
 
@@ -145,33 +162,22 @@
   justify-content: center;
 
   &::before {
-    width: 135px;
-    height: 204px;
-    right: calc(50% - 60px);
-    top: -130px;
     background-image: url("../../img/new_main_page/buyer/shipment.png");
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-color:  $white;
   }
 
   @include media-breakpoint-up(md) {
     justify-content: start;
 
     &::before {
-      width: 175px;
-      height: 204px;
-      right: calc(50% - 100px);
-      top: -170px;
+      right: calc(50% - 55px);
+      background-size: 102px 102px;
     }
   }
 
   @include media-breakpoint-up(lg) {
     margin-bottom: 225px;
 
-    &::before {
-      width: 195px;
-      height: 204px;
-    }
   }
 }
 
@@ -185,22 +191,15 @@
 .how-issue__item--pay {
 
   &::before {
-    width: 135px;
-    height: 204px;
-    right: calc(50% - 65px);
-    top: -140px;
     background-image: url("../../img/new_main_page/buyer/pay.png");
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-color:  $white;
   }
 
   @include media-breakpoint-up(md) {
 
     &::before {
-      width: 175px;
-      height: 204px;
-      right: calc(50% - 100px);
-      top: -160px;
+      right: calc(50% - 55px);
+      background-size: 102px 102px;
     }
   }
 
@@ -208,9 +207,8 @@
     margin-bottom: 43px;
     margin-right: 15px;
 
-    &::before {
-      width: 195px;
-      height: 204px;
+    &::after {
+      top: 55px;
     }
   }
 }
@@ -226,8 +224,13 @@
     margin-right: 630px;
 
     &::before {
-      left: calc(50% + 217px);
-      top: -30px;
+      left: calc(50% + 246px);
+      top: 0;
+    }
+
+    &::after {
+      left: calc(50% + 295px);
+      top: 116px;
     }
   }
 
@@ -239,12 +242,34 @@
     justify-content: end;
 
     &::before {
-      right: calc(50% + 217px);
-      top: -30px;
+      right: calc(50% + 249px);
+      top: 0;
+    }
+
+    &::after {
+      left: calc(50% - 335px);
+      top: 116px;
     }
   }
-
 }
+
+.how-issue__item:last-child {
+  &::after {
+    top: -98px;
+  }
+
+  @include media-breakpoint-up(md) {
+    &::after {
+      top: -190px;
+    }
+  }
+  @include media-breakpoint-up(lg) {
+    &::after {
+      top: -16px;
+    }
+  }
+}
+
 
 .how-issue__tertiary {
   text-align: center;
