--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -120,7 +120,7 @@
   }
 }
 
-.button__button-arrow {
+.button--arrow {
   min-width: auto;
   width: 100%;
   height: 60px;
@@ -142,14 +142,9 @@
     width: 70px;
     height: 60px;
     background-size: auto;
-    margin-left: 20px;
 
     &::after {
       background-size: auto;
     }
-  }
-
-  @include media-breakpoint-up(lg) {
-    margin-left: 20px;
   }
 }
