--- a/src/scss/components/_advantage-bayres.scss
+++ b/src/scss/components/_advantage-bayres.scss
@@ -18,6 +18,7 @@
     padding: 0;
     display: flex;
     flex-wrap: wrap;
+    gap: 20px;
     justify-content: center;
 
     @include media-breakpoint-up(md) {
@@ -49,7 +50,7 @@
 .advantage-bayres__heading {
   margin: 0;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 
   & span:nth-of-type(2) {
     text-transform: uppercase;
